# bingo

./: .gitignore  .gitmodules  CMakeLists.txt  Countdown.qml  Front.qml  README.md  bingo.pro  bingo.qrc  bingowindow.cpp  bingowindow.h  bingowindow.ui  cardgenerator.cpp  cardgenerator.h  cardsdialog.ui  flake.nix  game.cpp  game.h  main.cpp  mainview.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  newgamedialog.cpp  newgamedialog.h  newgamedialog.ui  toolchain-mingw.cmake
.github/workflows/: build.yml
